FOXDEN/Authz.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: authz
  namespace: foxden
spec:
  selector:
    app: authz
  ports:
    - port: 8380
      targetPort: 8380
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: authz
  name: authz
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: authz
  replicas: 1
  template:
    metadata:
      labels:
        app: authz
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8380"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/authz:v0.0.3-test2
        name: authz
        imagePullPolicy: Always
        command:
          - /data/srv
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /apis
            port: 8380
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8380
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
