FOXDEN/Frontend.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: foxden
spec:
  selector:
    app: frontend
  ports:
    - port: 8344
      targetPort: 8344
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8344"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/frontend:v0.0.1-dev8
        name: frontend
        imagePullPolicy: Always
        command:
          - /data/srv
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /apis
            port: 8344
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8344
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
        - name: schemas
          mountPath: /etc/schemas
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
      - name: schemas
        secret:
          secretName: schema-secrets
