FOXDEN/MLHub.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mlhub
  namespace: foxden
spec:
  selector:
    app: mlhub
  ports:
    - port: 8350
      targetPort: 8350
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: mlhub
  name: mlhub
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: mlhub
  replicas: 1
  template:
    metadata:
      labels:
        app: mlhub
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8350"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/mlhub:v0.0.3-test2
        name: mlhub
        imagePullPolicy: Always
        command:
          - /data/srv
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /apis
            port: 8350
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8350
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
