FOXDEN/PublicationService.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: publish
  namespace: foxden
spec:
  selector:
    app: publish
  ports:
    - port: 8355
      targetPort: 8355
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: publish
  name: publish
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: publish
  replicas: 1
  template:
    metadata:
      labels:
        app: publish
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8355"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/publicationservice:v0.2.6
        name: publish
        imagePullPolicy: Always
        command:
          - /data/srv
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /apis
            port: 8355
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8355
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
