FOXDEN/SpecScansService.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: scans
  namespace: foxden
spec:
  selector:
    app: scans
  ports:
    - port: 8390
      targetPort: 8390
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: scans
  name: scans
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: scans
  replicas: 1
  template:
    metadata:
      labels:
        app: scans
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8390"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/specscansservice:v0.0.1-dev4
        name: scans
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /api
            port: 8390
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8390
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
