FOXDEN/SyncService.yaml
---
kind: Service
apiVersion: v1
syncservice:
  name: syncservice
  namespace: foxden
spec:
  selector:
    app: syncservice
  ports:
    - port: 8300
      targetPort: 8300
      name: foxden
---
kind: Deployment
apiVersion: apps/v1
syncservice:
  labels:
    app: syncservice
  name: syncservice
  namespace: foxden
spec:
  selector:
    matchLabels:
      app: syncservice
  replicas: 1
  template:
    syncservice:
      labels:
        app: syncservice
        env: k8s
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8300"
    spec:
      containers:
      - image: ghcr.io/chesscomputing/syncservice:v0.2.6
        name: syncservice
        imagePullPolicy: Always
        command:
          - /data/srv
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "8000m"
        livenessProbe:
          httpGet:
            path: /apis
            port: 8300
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 120
          periodSeconds: 10
        ports:
        - containerPort: 8300
          protocol: TCP
          name: foxden
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
        - name: schemas
          mountPath: /etc/schemas
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: foxden-secrets
      - name: schemas
        secret:
          secretName: schema-secrets
