FOXDEN/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: foxden
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 8344
